crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__decl_empty_body.snap
---
source: crates/alder-parse/src/item/test.rs
description: "test \"todo\" {}"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 15,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Test(
            TestDecl {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 1,
                            column: 12,
                        },
                    },
                    value: "todo",
                },
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    value: Block {
                        stmts: [],
                        tail: None,
                    },
                },
            },
        ),
    },
}
