crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__error_test_name_bad_string.snap
---
source: crates/alder-parse/src/item/test.rs
description: "test \"unterminated"
---
Test(
    NameString(
        Endless,
        1,
        19,
    ),
    1,
    1,
)
