crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__error_test_no_body.snap
---
source: crates/alder-parse/src/item/test.rs
description: "test \"adds numbers\""
---
Test(
    Body(
        Open(
            1,
            20,
        ),
        1,
        20,
    ),
    1,
    1,
)
