crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__error_test_no_name.snap
---
source: crates/alder-parse/src/item/test.rs
description: "test { assert true }"
---
Test(
    Name(
        1,
        6,
    ),
    1,
    1,
)
