crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__error_tests_bad_item.snap
---
source: crates/alder-parse/src/item/test.rs
description: "tests {\n    42\n}\n"
---
Tests(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 1,
                column: 8,
            },
            unexpected: Position {
                line: 2,
                column: 5,
            },
        },
    ),
    1,
    1,
)
