crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__error_tests_item.snap
---
source: crates/alder-parse/src/item/test.rs
description: "tests {\n    test 42 {}\n}\n"
---
Tests(
    Item(
        Test(
            Name(
                2,
                10,
            ),
            2,
            5,
        ),
        2,
        5,
    ),
    1,
    1,
)
