crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__error_tests_non_item_same_line.snap
---
source: crates/alder-parse/src/item/test.rs
description: "tests { let x = 1 42 }"
---
Tests(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 1,
                column: 18,
            },
            unexpected: Position {
                line: 1,
                column: 19,
            },
        },
    ),
    1,
    1,
)
