crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__error_tests_open.snap
---
source: crates/alder-parse/src/item/test.rs
description: "tests ["
---
Tests(
    Open(
        1,
        7,
    ),
    1,
    1,
)
