crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__error_tests_same_line.snap
---
source: crates/alder-parse/src/item/test.rs
description: "tests { test \"a\" {} test \"b\" {} }"
---
Tests(
    SameLine(
        1,
        21,
    ),
    1,
    1,
)
