crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__error_tests_semicolon.snap
---
source: crates/alder-parse/src/item/test.rs
description: "tests { test \"a\" {}; }"
---
Tests(
    Item(
        Semicolon(
            1,
            20,
        ),
        1,
        20,
    ),
    1,
    1,
)
