crates/alder-parse/src/item/snapshots/alder_parse__item__test__tests__error_tests_unclosed.snap
---
source: crates/alder-parse/src/item/test.rs
description: "tests {\n    test \"a\" {}\n"
---
Tests(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 2,
                column: 16,
            },
            unexpected: Position {
                line: 3,
                column: 1,
            },
        },
    ),
    1,
    1,
)
